<resources>
    <string name="app_name">LIONS</string>
    <string name="item_add">Lägg till</string>
    <string name="add_point_title">Titel</string>
    <string name="add_point_description">Beskrivning</string>
    <string name="add_point_category">Kategori</string>
    <string name="add_point_official_point">Officiell intressepunkt</string>
    <string name="title_activity_indoor">Indoor</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_outdoor">Outdoor</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_building_title">Byggnadsnamn</string>
    <string name="skanQrMarker"> Skanna en QR-kod </string>
    <string name="skanQrMarkerCar"> Skanna QRkoden på din bilnyckel för att hitta bilen.</string>
    <string name="skanQrMarkerPlace"> Skanna QRkoden på anslagstavlan för den byggnad du beffinner dig i för att hitta din position.</string>
    <string name="addMarkerExplanation"> Tryck och håll fingret på den position du vill lägga till en punkt på</string>
    <string name="addBuildingExplanation"> Tryck och håll fingret på den position du vill lägga till en byggnad på</string>
    <string name="addBuildingNoAccess">Du måste vara admin för att lägga till en byggnad</string>
    <string name="removePointQuetion">Vad vill du göra med din punkt?</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="abort">Avbryt</string>
    <string name="remove">Ta bort</string>
    <string name="change">Ändra</string>
    <string name="ok">Ok</string>
    <string name="adminRequierdForChangingPoint">"Du måste vara admin för att ändra en officiell punkt"</string>
    <string name="createdElevator">Lägg till en hiss med samma namn på en annan våning för att koppla ihop dem</string>
    <string name="createdStairs">Lägg till en trappa med samma namn på en annan våning för att koppla ihop dem</string>

    <string name="adminText">Användarnamn och lösenord?</string>
    <string name="username">Användarnamn</string>
    <string name="password">Lösenord</string>
    <string name="addfloor">+ Lägg till våning</string>string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCutrsxJ6Vh_OdgQvpPQU4C40-UlVca9dI
    </string>
    <string name="info_welcome">Hej och välkommen till LIONS!</string>
    <string name="lions">(Local indoor &amp; outdoor navigation system)</string>
    <string name="info_details">Detta är en app som hjälper dig att hitta i nya byggnader. Det kan
    verka skrämmande, men lugn! Vi hjälper dig!</string>
    <string name="non_chosen">Ingen kategori vald</string>
    <string name="Entrance"> Entré </string>
    <string name="Elevator"> Hiss </string>
    <string name="ConferenceRoom"> Konferansrum </string>
    <string name="Toilet"> Toalett </string>
    <string name="Stairs"> Trappa </string>
    <string name="Printer"> Skrivare </string>
    <string name="Other">Övrigt</string>
    <string name="create_car_prompt">Vill du skapa en ny bil och kopiera URL-addressen?</string>
    <string name="create_car_info">Skriv ut bilden som finns på URL-addressen.</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">closed</string>

    <string-array name="category_array">
        <item>@string/non_chosen</item>
        <item>@string/Entrance</item>
        <item>@string/Elevator</item>
        <item>@string/ConferenceRoom</item>
        <item>@string/Toilet</item>
        <item>@string/Stairs</item>
        <item>@string/Printer</item>
        <item>@string/Other</item>
    </string-array>
    <string name="title_activity_navigationdrawertest">NAVIGATIONDRAWERTEST</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
