<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/info_welcome"
        android:id="@+id/info_text1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lions"
        android:layout_marginTop="10dp"
        android:id="@+id/info_text2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_details"
        android:layout_marginTop="10dp"
        android:id="@+id/info_text3"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Till höger \n hittar du en \n QR-scanner"
            android:gravity="left"
            android:id="@+id/info_text4"/>

        <ImageView
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:src="@drawable/arrow_right"
            android:id="@+id/right_arrow"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:src="@drawable/arrow_right"
            android:layout_gravity="left"
            android:rotation="180"
            android:id="@+id/left_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="och till vänster \n hittar du en karta"
            android:id="@+id/info_text5"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Klicka eller scanna en byggnad du vill hitta i!"
        android:id="@+id/info_text6"/>


</LinearLayout>